--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -128,7 +128,15 @@
                 </div>
             </div>
         </div>
-
+        {% if integralIsOpen %}
+            <label for="integralAgree" class="weui-agree" style="display: none;" id="integralAgreeLabel">
+                <input id="integralAgree" type="checkbox" class="weui-agree__checkbox">
+                <span class="weui-agree__text" id="integralAgreeText">
+            使用积分抵扣
+    </span>
+            </label>
+        {% endif %}
+        </label>
         <label for="weuiAgree" class="weui-agree">
             <input id="weuiAgree" type="checkbox" class="weui-agree__checkbox">
             <span class="weui-agree__text">
@@ -150,6 +158,9 @@
     <script type="text/javascript" src="{{ url_for('static',filename='js/numberstepper.js') }}"></script>
 
     <script>
+        var integral=0;
+        var sumFee = 0;
+        var hasIntegral = false;
         function cancel(id) {
             $.ajax({
                 url: window.location.protocol + "//" + window.location.host + '/wx/api/cancelorder/' + id,
@@ -172,6 +183,7 @@
         }
         $("#book_at").change(function () {
             getPrefer();
+            getIntegral();
             {#            setSum();#}
             $("#sum").css("color", 'red');
         });
@@ -179,17 +191,52 @@
 
         $('body').on('change.numstep', '.js-numstepper', function (event, mode, value, valueOld) {
             getPrefer();
+            getIntegral();
             {#            setSum();#}
             $("#sum").css("color", 'red');
         });
         function setInsure(obj) {
             getPrefer();
+            getIntegral();
         }
-        function setSum(v) {
+
+        function setSum(v,hasntegral) {
+
             {#            var v = (100*($("#count").val() * ($("#price").text() * 1.0 + $('input[name="radio1"]:checked').attr("price") / 100.0)) - Math.abs($("#cutfee").text() * 100))/100;#}
-            var value = v + ($("#count").val() * $('input[name="radio1"]:checked').attr("price") ) / 100.0;
-            $("#totalfee-top").html('￥' + value);
-            $("#sum").html(value)
+            var value = v  + ($("#count").val() * $('input[name="radio1"]:checked').attr("price") ) / 100.0;
+            sumFee = value;
+            if(hasntegral){
+                var newValue = value-integral;
+            }
+            else {
+                var newValue = value;
+            }
+
+            $("#totalfee-top").html('￥' + newValue);
+            $("#sum").html(newValue)
+        }
+
+        function getIntegral() {
+            var formDataIntegral = new FormData();
+            formDataIntegral.append("fee",sumFee);
+            $.ajax({
+                url: window.location.protocol + "//" + window.location.host + '/wx/api/integral',
+                type: 'POST',
+                data: formDataIntegral,
+                contentType: false,
+                processData: false,
+                async: false,
+                success: function (data) {
+                    if (data["status"]=="ok") {
+                        integral = data["result"]["cut"];
+                        $("#integralAgreeText").text("使用 "+data["result"]["used"]+" 积分抵扣 "+integral+"元");
+                        $("#integralAgreeLabel").show()
+                    }
+{#                    setSum(sumFee,hasIntegral);#}
+
+                }
+
+            })
         }
         function getPrefer() {
             var formDataPrefer = new FormData();
@@ -232,6 +279,7 @@
             formData.append('location', loc);
             formData.append('serverstop', serverstop);
             formData.append('insureid', $('input[name="radio1"]:checked').val() * 1);
+            formData.append('hasIntegral', hasIntegral);
             formData.append('book_at', $('#book_at').val());
             $.ajax({
                 url: window.location.protocol + "//" + window.location.host + '/wx/api/makeorder',
@@ -292,6 +340,8 @@
             for (var k = 1; k < 16; k++) {
                 dayArray.push({label: '' + k, value: k})
             }
+
+
             $('#count').on('click', function () {
                 weui.picker(dayArray, {
                     onChange: function (result) {
@@ -300,6 +350,7 @@
                     onConfirm: function (result) {
                         $('#count').val(result[0]['value']);
                         getPrefer();
+                        getIntegral();
                         {#                        setSum();#}
                         $('#sum').css("color", 'red');
                     }
@@ -337,6 +388,18 @@
 
             $("#count").val(1);
             getPrefer();
+            getIntegral();
+            $("#integralAgreeLabel").click(function () {
+                 if ($("#integralAgree").prop("checked")) {
+                    hasIntegral = true;
+
+                 }
+                 else {
+                     hasIntegral = false;
+                 }
+                 
+                 setSum(sumFee,hasIntegral);
+            });
             {#            setSum();#}
             {#            $('#locpicker').val('{{ serverstop[0].name }}');#}
             {#            serverstop = {{ serverstop[0].id }};#}
