--- a/CarWechat/app/templates/car/profile.html
+++ b/CarWechat/app/templates/car/profile.html
@@ -26,7 +26,12 @@
         </div>
 
         <div class="weui-cells__title">个人信息</div>
-
+        <div class="weui-cell ">
+            <div class="weui-cell__bd">通力币<span class="weui-badge">New</span></div>
+            <div class="weui-cell__ft" style="font-size: 0">
+                <span style="vertical-align:middle; font-size: 17px;">{{ data.integral }}</span>
+            </div>
+        </div>
         <div class="weui-cell ">
             <div class="weui-cell__bd">注册日期</div>
             <div class="weui-cell__ft" style="font-size: 0">
