--- a/CarWechat/app/templates/agentbase.html
+++ b/CarWechat/app/templates/agentbase.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="pragma" content="no-cache">
-
-    <meta http-equiv="cache-control" content="no-cache">
-
-    <meta http-equiv="expires" content="">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Last-Modified" content="Mon, 13 Aug 2018 22:44:00 GMT+0800">
+
     <!--Import Google Icon Font-->
     <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
     <!--Import materialize.css-->
