--- a/CarWechat/app/templates/car/orderDetail.html
+++ b/CarWechat/app/templates/car/orderDetail.html
@@ -237,6 +237,7 @@
                 success: function (data) {
                     if (data['status'] === 'ok') {
                         alert("评价成功，获得" + data["integral"] + "积分")
+                        location.reload();
                     }
                     else {
                         alert("评价失败，请稍后重试")
