--- a/CarWechat/app/templates/car/orderDetail.html
+++ b/CarWechat/app/templates/car/orderDetail.html
@@ -236,7 +236,7 @@
                 processData: false,
                 success: function (data) {
                     if (data['status'] === 'ok') {
-                        alert("评价成功，获得" + data["integral"] + "积分")
+                        alert("评价成功，获得" + data["integral"] + "积分");
                         location.reload();
                     }
                     else {
