--- a/CarAdmin/app/templates/myAdmin/order.html
+++ b/CarAdmin/app/templates/myAdmin/order.html
@@ -83,10 +83,10 @@
                         <td class="sumData"> 合计订单: {{ summary_data.count }}</td>
                         <td class="sumData"> 普通订单: {{ summary_data.normal }}</td>
                         <td class="sumData"> 续租订单: {{ summary_data.continue }}</td>
-                        <td class="sumData"> 原价总计: {{ summary_data.oldfee }}</td>
-                        <td class="sumData"> 折扣总计: {{ summary_data.cutfee }}</td>
-                        <td class="sumData"> 积分抵扣总计: {{ summary_data.integralfee }}</td>
-                        <td class="sumData"> 实付总价: {{ summary_data.totalfee }}</td>
+                        <td class="sumData"> 原价总计: ￥{{ summary_data.oldfee }}</td>
+                        <td class="sumData"> 折扣总计: ￥{{ summary_data.cutfee }}</td>
+                        <td class="sumData"> 积分抵扣总计: ￥{{ summary_data.integralfee }}</td>
+                        <td class="sumData"> 实付总价: ￥{{ summary_data.totalfee }}</td>
 
                     </tr>
                 </table>
