--- a/CarAdmin/app/templates/myAdmin/KPI.html
+++ b/CarAdmin/app/templates/myAdmin/KPI.html
@@ -2,6 +2,8 @@
 {% block head_meta %}
     {{ super() }}
     <script src="https://cdn.bootcss.com/echarts/4.1.0.rc2/echarts.min.js"></script>
+
+    <script src="{{ url_for('static',filename='js/macarons.js') }}"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 {% endblock %}
 {% block head_css %}
@@ -52,19 +54,19 @@
         <div class="col-md-6 col-lg-4 col-sm-12">
             <div id="feeWeek" class="chartContainer"></div>
         </div>
-        <div class="col-md-6 col-lg-4 col-sm-12">
-            <div id="userMonth" class="chartContainer"></div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-sm-12">
-            <div id="userWeek" class="chartContainer"></div>
-        </div>
+
         <div class="col-md-6 col-lg-4 col-sm-12">
             <div id="agentMonth" class="chartContainer"></div>
         </div>
         <div class="col-md-6 col-lg-4 col-sm-12">
             <div id="agentWeek" class="chartContainer"></div>
         </div>
-
+        <div class="col-md-6 col-lg-4 col-sm-12">
+            <div id="userMonth" class="chartContainer"></div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-sm-12">
+            <div id="userWeek" class="chartContainer"></div>
+        </div>
     </div>
 
     <script type="text/javascript">
@@ -95,10 +97,11 @@
                     orderCountWeek.setOption(data["orderCountWeek"]);
                     feeMonth.setOption(data["feeMonth"]);
                     feeWeek.setOption(data["feeWeek"]);
+                    agentMonth.setOption(data["agentMonth"], 'macarons');
+                    agentWeek.setOption(data["agentWeek"],'macarons');
                     userMonth.setOption(data["userMonth"]);
                     userWeek.setOption(data["userWeek"]);
-                    agentMonth.setOption(data["agentMonth"]);
-                    agentWeek.setOption(data["agentWeek"]);
+
 
                 }
 
