--- a/CarAdmin/app/templates/base.html
+++ b/CarAdmin/app/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--Import Google Icon Font-->
-<link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">    <!--Import materialize.css-->
+    <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
+    <!--Import materialize.css-->
     <link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
     {% block css %}{% endblock %}
@@ -14,24 +15,24 @@
 <body>
 <nav>
     <div class="nav-wrapper blue lighten-2">
-        <a href="{{url_for('web.carIndex')}}" class="brand-logo"><i class="material-icons">home</i>通力汽车</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="{{url_for('web.customerList')}}">客户信息</a></li>
-        <li><a href="{{url_for('web.carList')}}">车辆信息</a></li>
-        <li><a href="{{url_for('web.mendHistoryList')}}">维护信息</a></li>
-        <li><a href="{{url_for('web.historyList')}}">租赁历史</a></li>
-          <li><a href="admin">后台管理</a></li>
-          <li><a href="{{url_for('login.logout')}}">退出登录</a></li>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <li><a href="{{url_for('web.customerList')}}">客户信息</a></li>
-        <li><a href="{{url_for('web.carList')}}">车辆信息</a></li>
-        <li><a href="{{url_for('web.mendHistoryList')}}">维护信息</a></li>
-        <li><a href="{{url_for('web.historyList')}}">租赁历史</a></li>
-          <li><a href="admin">后台管理</a></li>
-          <li><a href="{{url_for('login.logout')}}">退出登录</a></li>
-      </ul>
+        <a href="{{ url_for('web.carIndex') }}" class="brand-logo"><i class="material-icons">home</i>通力汽车</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="{{ url_for('web.customerList') }}">客户信息</a></li>
+            <li><a href="{{ url_for('web.carList') }}">车辆信息</a></li>
+            <li><a href="{{ url_for('web.mendHistoryList') }}">维护信息</a></li>
+            <li><a href="{{ url_for('web.historyList') }}">租赁历史</a></li>
+            <li><a href="admin">后台管理</a></li>
+            <li><a href="{{ url_for('login.logout') }}">退出登录</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href="{{ url_for('web.customerList') }}">客户信息</a></li>
+            <li><a href="{{ url_for('web.carList') }}">车辆信息</a></li>
+            <li><a href="{{ url_for('web.mendHistoryList') }}">维护信息</a></li>
+            <li><a href="{{ url_for('web.historyList') }}">租赁历史</a></li>
+            <li><a href="admin">后台管理</a></li>
+            <li><a href="{{ url_for('login.logout') }}">退出登录</a></li>
+        </ul>
     </div>
 
 </nav>
