--- a/CarAdmin/app/templates/admin/base.html
+++ b/CarAdmin/app/templates/admin/base.html
@@ -2,8 +2,9 @@
 {% import 'admin/static.html' as admin_static with context %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{% block title %}{% if admin_view.category %}{{ admin_view.category }} - {% endif %}{{ admin_view.name }} - {{ admin_view.admin.name }}{% endblock %}</title>
+<head>
+    <title>{% block title %}{% if admin_view.category %}{{ admin_view.category }} - {% endif %}{{ admin_view.name }} -
+        {{ admin_view.admin.name }}{% endblock %}</title>
     {% block head_meta %}
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,69 +17,75 @@
         <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="{{ admin_static.url(filename='admin/css/bootstrap3/admin.css', v='1.1.1') }}" rel="stylesheet">
         <style>
-        body {
-            padding-top: 4px;
-        }
+            @media print {
+                a[href]:after {
+                    content: none !important;
+                }
+            }
+
+            body {
+                padding-top: 4px;
+            }
         </style>
     {% endblock %}
     {% block head %}
     {% endblock %}
     {% block head_tail %}
     {% endblock %}
-  </head>
-  <body>
-    {% block page_body %}
+</head>
+<body>
+{% block page_body %}
     <div class="container" style="width: 100%">
-      <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#admin-navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          {% block brand %}
-          <a class="navbar-brand" href="#">{{ admin_view.admin.name }}</a>
-          {% endblock %}
-        </div>
-        <!-- navbar content -->
-        <div class="collapse navbar-collapse" id="admin-navbar-collapse">
-          {% block main_menu %}
-          <ul class="nav navbar-nav">
-            {{ layout.menu() }}
-          </ul>
-          {% endblock %}
+        <nav class="navbar navbar-default" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#admin-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                {% block brand %}
+                    <a class="navbar-brand" href="#">{{ admin_view.admin.name }}</a>
+                {% endblock %}
+            </div>
+            <!-- navbar content -->
+            <div class="collapse navbar-collapse" id="admin-navbar-collapse">
+                {% block main_menu %}
+                    <ul class="nav navbar-nav">
+                        {{ layout.menu() }}
+                    </ul>
+                {% endblock %}
 
-          {% block menu_links %}
-          <ul class="nav navbar-nav navbar-right">
-            {{ layout.menu_links() }}
-          </ul>
-          {% endblock %}
-          {% block access_control %}
-          {% endblock %}
-        </div>
-      </nav>
+                {% block menu_links %}
+                    <ul class="nav navbar-nav navbar-right">
+                        {{ layout.menu_links() }}
+                    </ul>
+                {% endblock %}
+                {% block access_control %}
+                {% endblock %}
+            </div>
+        </nav>
 
-      {% block messages %}
-      {{ layout.messages() }}
-      {% endblock %}
+        {% block messages %}
+            {{ layout.messages() }}
+        {% endblock %}
 
-      {# store the jinja2 context for form_rules rendering logic #}
-      {% set render_ctx = h.resolve_ctx() %}
+        {# store the jinja2 context for form_rules rendering logic #}
+        {% set render_ctx = h.resolve_ctx() %}
 
-      {% block body %}{% endblock %}
+        {% block body %}{% endblock %}
     </div>
-    {% endblock %}
+{% endblock %}
 
-    {% block tail_js %}
+{% block tail_js %}
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment-with-locales.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/select2/3.5.2/select2.min.js" type="text/javascript"></script>
-    {% endblock %}
+{% endblock %}
 
-    {% block tail %}
-    {% endblock %}
-  </body>
+{% block tail %}
+{% endblock %}
+</body>
 </html>
