--- a/CarWechat/app/templates/agent/carback.html
+++ b/CarWechat/app/templates/agent/carback.html
@@ -169,7 +169,7 @@
         </div>
         <div class="weui-wepay-details__bd">
             <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">起始日期</div>
+                <div class="weui-wepay-detail__bd">下单日期</div>
                 <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
             </div>
             <div class="weui-wepay-detail">
