--- a/CarWechat/app/templates/car/sign.html
+++ b/CarWechat/app/templates/car/sign.html
@@ -10,7 +10,7 @@
     <div class="weui-cells__title">完善个人信息</div>
     <div class="weui-cells weui-cells_form">
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
+            <div class="weui-cell__hd"><label class="weui-label">*姓名</label></div>
 
             <div class="weui-cell__bd">
                 <input id="name" class="weui-input" type="text" placeholder="请输入真实姓名"/>
@@ -18,7 +18,7 @@
 
         </div>
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">驾龄</label></div>
+            <div class="weui-cell__hd"><label class="weui-label">*驾龄</label></div>
             <div class="weui-cell__bd">
                 <div class="weui-slider-box">
                     <div class="weui-slider">
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">身份证 </label></div>
+            <div class="weui-cell__hd"><label class="weui-label">*身份证 </label></div>
 
             <div class="weui-cell__bd">
                 <input id="idCode" class="weui-input" type="text" placeholder="请输入身份证号码"/>
@@ -49,7 +49,7 @@
         </div>
         <div class="weui-cell weui-cell_vcode">
             <div class="weui-cell__hd">
-                <label class="weui-label">手机号</label>
+                <label class="weui-label">*手机号</label>
             </div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="tel" id="phone">
@@ -60,7 +60,7 @@
         </div>
 
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label" id="vCodeLable1">验证码</label></div>
+            <div class="weui-cell__hd"><label class="weui-label" id="vCodeLable1">*验证码</label></div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="number" id="vCode" placeholder="请输入验证码"/>
             </div>
