--- a/CarWechat/app/templates/car/inform.html
+++ b/CarWechat/app/templates/car/inform.html
@@ -108,7 +108,7 @@
                 3.乙方对汽车租赁期间的交通违章及交警电子眼抓拍全权负责。乙方应在违章告知日后七天内处理违章罚款，逾期未处理则由甲方代为办理，甲方收取代办费100元/台，车辆有扣分的额外收取100元/分。甲方在垫款后经索要不给的，保留向乙方学校发律师函以及到法院起诉索赔的权利。
             </li>
             <li>
-                4.乙方可以在甲方处购买车辆保险：（1）保险费每天20元，乙方如出现交通事故，车辆损失1000元以内划痕损失（不包括钣金等）免予向甲方赔偿；1000元以外部分按损失的30%赔偿车辆折旧损失。（2）保险费每天40元，乙方如出现交通事故，车辆损失1500元以内免予向甲方赔偿；1500以外部分按损失30%赔偿车辆折旧损失。
+                4.乙方可以在甲方处购买车辆保险：保险费每天40元，乙方如出现交通事故，车辆损失1000元以内免予向甲方赔偿；1000以外部分按损失30%赔偿车辆折旧损失。
                 上述保险赔偿项目不包括乙方因事故造成的人身伤亡。
             </li>
             <li>
